package objet;

public interface StrategieVente {
    boolean vendreAvion();
}
