@startuml

title __LAB01_BARBIERG's Class Diagram__\n

  namespace objet {
    class objet.Composante {
    }
  }
  

  namespace objet {
    class objet.Entrepot {
    }
  }
  

  namespace objet {
    class objet.Model {
    }
  }
  

  namespace objet {
    abstract class objet.Noeud {
    }
  }
  

  namespace objet {
    interface objet.StrategieVente {
    }
  }
  

  namespace objet {
    class objet.UsineAssemblage {
    }
  }
  

  namespace objet {
    class objet.UsineProduction {
    }
  }
  

  namespace objet {
    class objet.venteAleatoire {
    }
  }
  

  namespace objet {
    class objet.venteIntervalleFixe {
    }
  }
  

  namespace simulation {
    class simulation.ComposanteEnChemin {
    }
  }
  

  namespace simulation {
    class simulation.Environnement {
    }
  }
  

  namespace simulation {
    class simulation.FenetrePrincipale {
    }
  }
  

  namespace simulation {
    class simulation.FenetreStrategie {
    }
  }
  

  namespace simulation {
    class simulation.Horloge {
    }
  }
  

  namespace simulation {
    class simulation.MenuFenetre {
    }
  }
  

  namespace simulation {
    class simulation.PanneauPrincipal {
    }
  }
  

  namespace simulation {
    class simulation.PanneauStrategie {
    }
  }
  

  namespace simulation {
    class simulation.Simulation {
    }
  }
  

  objet.Entrepot -up-|> objet.Noeud
  objet.Entrepot o-- objet.StrategieVente : strategieVente
  objet.Noeud .up.|> java.util.Observer
  objet.UsineAssemblage -up-|> objet.Noeud
  objet.UsineAssemblage o-- objet.Composante : composanteSortie
  objet.UsineProduction -up-|> objet.Noeud
  objet.UsineProduction o-- objet.Composante : composanteSortie
  objet.venteAleatoire .up.|> objet.StrategieVente
  objet.venteIntervalleFixe .up.|> objet.StrategieVente
  simulation.ComposanteEnChemin o-- objet.Composante : composante
  simulation.ComposanteEnChemin o-- objet.Noeud : noeudArrive
  simulation.ComposanteEnChemin o-- objet.Noeud : noeudDepart
  simulation.Environnement -up-|> javax.swing.SwingWorker
  simulation.FenetrePrincipale .up.|> java.beans.PropertyChangeListener
  simulation.FenetrePrincipale -up-|> javax.swing.JFrame
  simulation.FenetreStrategie -up-|> javax.swing.JFrame
  simulation.FenetreStrategie o-- simulation.PanneauStrategie : panneauStrategie
  simulation.Horloge -up-|> java.util.Observable
  simulation.MenuFenetre -up-|> javax.swing.JMenuBar
  simulation.PanneauPrincipal -up-|> javax.swing.JPanel
  simulation.PanneauStrategie -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
